--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
       <center>
         <div>
-          <img src="img/img2.png" width="200px" height="100px" alt="" />
+          <img src="./public/img/img2.png" width="200px" height="100px" alt="" />
         </div>
         <div id="txtFoot"><p>Lorem ipsum dolor sit amet.</p></div>
       </center>
