--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               padding-top: 10px;
             "
           >
-            <img src="../img/unknown.png" width="200px" height="80px" alt="" />
+            <img src="./public/img/unknown.png" width="200px" height="80px" alt="" />
           </div>
           <div>ACCEUIL</div>
           <div>A PROPOS</div>
