--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
           <table width="100%">
             <tr>
-              <td><img src="/img/logo.png" width="50px" alt="" /></td>
+              <td><img src="./public/img/logo.png" width="50px" alt="" /></td>
               <td>
                 <center>
                   Rester infromez sur nos eventeement
